Fix colour inversion, light/dark mode

--- a/css/onepage.less
+++ b/css/onepage.less
@@ -156,6 +156,11 @@ input:checked + .slider:before {
 	transform: translateX(9px);
 }
 
+.inversed {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
 .social-links {
 	height: 70px;
 	align-items: center;
